# accord

./: Makefile.am  autogen.sh  common.mk  configure.ac
apps/: Makefile.am
apps/queue/: Makefile.am
conductor/: Makefile.am  acrdnet.c
libacrd/: Makefile.am  libacrd.c
test/: Makefile.am
